CB-13261 Implement termination of security group and use existing one